syntax = "proto3";

package voter.voter;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "voter/voter/params.proto";

option go_package = "voter/x/voter/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams (MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc CreatePoll   (MsgCreatePoll  ) returns (MsgCreatePollResponse  );
  rpc CastVote     (MsgCastVote    ) returns (MsgCastVoteResponse    );
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                     "authority";
  option           (amino.name) = "voter/x/voter/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgCreatePoll {
  option (cosmos.msg.v1.signer) = "creator";
           string creator = 1;
           string title   = 2;
  repeated string options = 3;
}

message MsgCreatePollResponse {
  int32  id    = 1;
  string title = 2;
}

message MsgCastVote {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string pollId  = 2;
  string option  = 3;
}

message MsgCastVoteResponse {
  int32  id     = 1;
  string option = 2;
}

